// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders nulls for invalid page 1`] = `
<DocumentFragment>
  <div>
    Layout Mock
  </div>
</DocumentFragment>
`;

exports[`renders repos page 1`] = `
<DocumentFragment>
  <div>
    Layout Mock
  </div>
</DocumentFragment>
`;

exports[`renders repos page 2`] = `
<DocumentFragment>
  <div>
    Repos Page
  </div>
</DocumentFragment>
`;
